tests/ui/impl-trait/in-trait/default-body-type-err.stderr
error[E0271]: type mismatch resolving `<&i32 as Deref>::Target == String`
  --> $DIR/default-body-type-err.rs:7:22
   |
LL |     fn lol(&self) -> impl Deref<Target = String> {
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found struct `String`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
